Adiciona informações de autoria e README

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <hr />
 <div id="footer" role="contentinfo">
   <p>
-    {{ site.title }} é orgulhosamente desenvolvido com <a href="http://jekyllrb.com/">Jekyll</a>.
-    <br />Design por <a href="http://binarybonsai.com/kubrick/">Michael Heilemann</a>. | 
-    <a href="{{ "/feed.xml" | relative_url }}">Entradas (RSS)</a>
-  </p>
+  {{ site.title }} é orgulhosamente desenvolvido com <a href="http://jekyllrb.com/">Jekyll</a> por {{ site.author }}.
+  <br />Design por <a href="http://binarybonsai.com/kubrick/">Michael Heilemann</a>. | 
+  <a href="{{ "/feed.xml" | relative_url }}">Entradas (RSS)</a>
+</p>
 </div>
